@@ -16,16 +16,16 @@
 	</resource>
 </resources>
     <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <version>2.21.0</version>
-        <configuration>
-          <suiteXmlFiles>
-            <suiteXmlFile>testng.xml</suiteXmlFile>
-          </suiteXmlFiles>
-        </configuration>
-      </plugin>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>2.22.0</version>
+            <configuration>
+                <testFailureIgnore>true</testFailureIgnore>
+                <useSystemClassLoader>false</useSystemClassLoader>
+                <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+            </configuration>
+        </plugin>
 		<plugin>
 			<groupId>org.apache.maven.plugins</groupId>
 			<artifactId>maven-compiler-plugin</artifactId>
@@ -55,31 +55,6 @@
 	    <groupId>org.seleniumhq.selenium</groupId>
 	    <artifactId>selenium-java</artifactId>
 	    <version>3.11.0</version>
-	</dependency>
-
-	<dependency>
-	  <groupId>org.testng</groupId>
-	  <artifactId>testng</artifactId>
-	  <version>6.14.3</version>
-	  <scope>test</scope>
-	</dependency>
-
-	<dependency>
-		<groupId>com.vimalselvam</groupId>
-		<artifactId>cucumber-extentsreport</artifactId>
-		<version>3.0.2</version>
-	</dependency>
-	
-	<dependency>
-		<groupId>com.aventstack</groupId>
-		<artifactId>extentreports</artifactId>
-		<version>3.1.2</version>
-		</dependency>	
-	<dependency>
-		<groupId>junit</groupId>
-		<artifactId>junit</artifactId>
-		<version>4.11</version>
-		<scope>test</scope>
 	</dependency>
 	
 	<dependency>
@@ -153,44 +128,15 @@
 	</dependency>
 	
 	<dependency>
-		<groupId>com.aventstack</groupId>
-		<artifactId>extentreports</artifactId>
-		<version>3.0.6</version>
-	</dependency>
-	
-	<dependency>
 	    <groupId>org.apache.poi</groupId>
 	    <artifactId>poi-ooxml</artifactId>
 	    <version>3.9</version>
 	</dependency>
-	
-	<dependency>
-	    <groupId>info.cukes</groupId>
-	    <artifactId>cucumber-core</artifactId>
-	    <version>1.2.5</version>
-	</dependency>	
-	
-	<dependency>
-		<groupId>com.relevantcodes</groupId>
-		<artifactId>extentreports</artifactId>
-		<version>2.41.2</version>
-	</dependency>
-	<dependency>
-	    <groupId>info.cukes</groupId>
-	    <artifactId>cucumber-core</artifactId>
-	    <version>1.2.5</version>
-	</dependency>
+
 	<dependency>
 		<groupId>com.vimalselvam</groupId>
 		<artifactId>cucumber-extentsreport</artifactId>
 		<version>3.0.2</version>
-	</dependency>	
-
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
 	</dependency>
 
 	<dependency>
@@ -205,6 +151,23 @@
 	  <version>4.12</version>
 	  <scope>test</scope>
 	</dependency>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.12</version>
+      <scope>compile</scope>
+    </dependency>
+    <dependency>
+      <groupId>info.cukes</groupId>
+      <artifactId>cucumber-junit</artifactId>
+      <version>1.2.5</version>
+      <scope>compile</scope>
+    </dependency>
+    <dependency>
+      <groupId>info.cukes</groupId>
+      <artifactId>cucumber-core</artifactId>
+      <version>1.2.5</version>
+    </dependency>
 
   </dependencies>
 </project>
